--- a/Dia 7- tienda_libros/tienda_libros/src/main/java/gm/tienda_libros/view/FormBook.form
+++ b/Dia 7- tienda_libros/tienda_libros/src/main/java/gm/tienda_libros/view/FormBook.form
@@ -108,7 +108,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Precio"/>
+                  <text value="Precio $ "/>
                 </properties>
               </component>
               <component id="dbae6" class="javax.swing.JTextField" binding="precioTexto">
@@ -118,6 +118,9 @@
                   </grid>
                 </constraints>
                 <properties/>
+                <clientProperties>
+                  <html.disable class="java.lang.Boolean" value="false"/>
+                </clientProperties>
               </component>
             </children>
           </grid>
