Obteniendo varios parametros con @RequestParam

--- a/springboot-web/src/main/resources/templates/list.html
+++ b/springboot-web/src/main/resources/templates/list.html
@@ -8,7 +8,8 @@
 <body>
     <h1 th:text="${title}">Document</h1>
     <div th:if="${users.isEmpty()}" th:text="${'No tiene elementos usuarios!'}"></div>
-    <table>
+    
+    <table th:if="${not (users.isEmpty())}">
         <thead>
             <tr>
                 <th>name</th>
@@ -17,8 +18,11 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="user">
-                <td></td>
+            <tr th:each="user: ${users}">
+                <td th:text="${user.name}"></td>
+                <td th:text="${user.lastname}"></td>
+                <td th:if="${user.email}" th:text="${user.email}"></td>
+                <td th:if="${not (user.email!=null)}" th:text="${'-'}"></td>
             </tr>
         </tbody>
     </table>
